<resources>
    <string name="app_name">Capital Shopping</string>
    <string name="login">Log In!</string>
    <string name="signup">Sign Up!</string>
    <string name="loginMessage">Please log in.</string>
    <string name="loginEnterUser">Enter Username:</string>
    <string name="loginEnterPass">Enter Password:</string>
    <string name="WelcomeMessage">Welcome, </string>
    <string name="adminButton">Admin</string>
    <string name="logoutButton">Log out</string>
    <string name="returnButton">Return to home</string>
    <string name="shopButton">Go shopping!</string>
    <string name="cartButton">View your cart</string>
    <string name="search">Search for an item</string>
    <string name="searchButton">Search!</string>
    <string name="total">Total: </string>
    <string name="clear">Clear cart</string>
    <string name="purchase">Purchase!</string>
    <string name="add">Add to Cart!</string>
</resources>