<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartActivity">

    <TextView
        android:id="@+id/TitleTextView2"
        android:layout_width="406dp"
        android:layout_height="115dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#1d62f5"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />

    <Button
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/returnButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleTextView2"
        app:layout_constraintVertical_bias="0.021"
        android:id="@+id/returnButton2"/>

    <TextView
        android:id="@+id/total"
        android:layout_width="330dp"
        android:layout_height="52dp"
        android:text="@string/total"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleTextView2"
        app:layout_constraintVertical_bias="0.167" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="203dp"
        android:layout_height="60dp"
        android:layout_marginTop="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total"
        app:layout_constraintVertical_bias="0.037"
        android:text="@string/clear"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/purchaseButton"
        android:layout_width="203dp"
        android:layout_height="60dp"
        android:layout_marginTop="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clearButton"
        app:layout_constraintVertical_bias="0.037"
        android:text="@string/purchase"
        android:textSize="30sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>