<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShopActivity">

    <TextView
        android:id="@+id/TitleTextView"
        android:layout_width="406dp"
        android:layout_height="115dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#1d62f5"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />

    <Button
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/returnButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleTextView"
        app:layout_constraintVertical_bias="0.021"
        android:id="@+id/returnButton"/>

    <EditText
        android:id="@+id/searchTerm"
        android:layout_width="307dp"
        android:layout_height="109dp"
        android:hint="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleTextView"
        app:layout_constraintVertical_bias="0.225" />

    <Button
        android:layout_width="165dp"
        android:layout_height="60dp"
        android:id="@+id/searchButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchTerm"
        app:layout_constraintVertical_bias="0.162"
        android:text="@string/searchButton"
        android:textSize="30sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>