<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/loginDisplay"
        android:layout_width="402dp"
        android:layout_height="133dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#1d62f5"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.137" />

    <TextView
        android:id="@+id/loginMessage"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/loginMessage"
        android:textColor="#1d62f5"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginDisplay"
        app:layout_constraintVertical_bias="0.083" />

    <EditText
        android:id="@+id/loginUsername"
        android:layout_width="219dp"
        android:layout_height="84dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginMessage"
        app:layout_constraintVertical_bias="0.177" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="219dp"
        android:layout_height="84dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginUsername"
        app:layout_constraintVertical_bias="0.202" />


    <TextView
        android:id="@+id/loginEnterUser"
        android:layout_width="164dp"
        android:layout_height="88dp"
        android:gravity="center"
        android:text="@string/loginEnterUser"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/loginUsername"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginMessage"
        app:layout_constraintVertical_bias="0.184" />

    <TextView
        android:id="@+id/loginEnterPass"
        android:layout_width="164dp"
        android:layout_height="88dp"
        android:gravity="center"
        android:text="@string/loginEnterPass"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/loginPassword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEnterUser"
        app:layout_constraintVertical_bias="0.164" />

    <Button
        android:layout_width="151dp"
        android:layout_height="70dp"
        android:layout_marginTop="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPassword"
        app:layout_constraintVertical_bias="0.068"
        android:id="@+id/loginSubmitButton"
        android:text="@string/login"
        android:textSize="30sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>